# caramell-blockchain

./: .gitignore  docker-compose.yml  genesis.json
Node-1/: Dockerfile
Node-2/: Dockerfile
Node-3/: Dockerfile
Node-4/: Dockerfile
Node-5/: Dockerfile
blockchainInit/: init.sh  qbftInit.json
caramell-blockchain/: truffle-config.js
caramell-blockchain/contracts/: storeData.sol
caramell-blockchain/migrations/: 2_deploy.js
caramell-blockchain/truffle/: package-lock.json  truffle-config.js
caramell-blockchain/truffle/contracts/: client.sol  clientContract.sol  clientFactory.sol  data.sol  storeData.sol
caramell-blockchain/truffle/migrations/: 2_deploy.js
caramell-blockchain/w3rs/: Cargo.toml  appendKeys.sh  createKeys.js  moveAbiHere.sh
caramell-blockchain/w3rs/contracts/: storeData.json
caramell-blockchain/w3rs/src/: main.rs
files/Node-1/: Dockerfile
files/Node-2/: Dockerfile
files/Node-3/: Dockerfile
files/Node-4/: Dockerfile
