[package]
name = "w3rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.7", features = ["abigen-offline"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
